# zephyr-proof

./: AGENTS.md  CHANGES.md  Cargo.toml  LICENSE  README.md  proof.json  rustfmt.toml  trace.json
.github/instructions/: copilot-instructions.md  copilot-instructions.md.instructions.md
benches/: bench_proving.rs
examples/: batch_tx.rs  custom_circuit.rs  large_trace.rs  real_transaction.rs  simple_add.rs  witness_generation.rs
src/: errors.rs  lib.rs  main.rs
src/chips/: add_chip.rs  evm_chip.rs  mod.rs
src/circuits/: arithmetic.rs  main_circuit.rs  mod.rs  storage.rs
src/prover/: mod.rs  parallel_prover.rs  verifier.rs
src/utils/: benchmarks.rs  evm_parser.rs  mod.rs
tests/: differential.rs  fuzz.rs  integration.rs
