[package]
name = "zephyr-proof"
version = "0.1.0"
edition = "2024"
authors = ["Kunal Singh Dadhwal <kunalsinghdadhwal@gmail.com>"]
description = "Modular Halo2-based ZK circuits for selective EVM opcode verification. A building block for real-time zkEVM proving."
license = "MIT"
repository = "https://github.com/kunalsinghdadhwal/zephyr-proof"
keywords = ["zk", "ethereum", "halo2", "evm", "proof"]
categories = ["cryptography::cryptocurrencies", "no-std"]
readme = "README.md"

[lib]
name = "zephyr_proof"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "verifier-cli"
path = "bin/cli.rs"
required-features = ["cli"]

[[bin]]
name = "benchmark"
path = "bin/benchmark.rs"
required-features = ["bench"]

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256

[profile.release]
opt-level = 3
debug = false
split-debuginfo = "unpacked"
overflow-checks = false
lto = "fat"
panic = "abort" 
incremental = false
codegen-units = 1

[workspace]
members = []

[dependencies]
alloy-contract = "1.0.41"
alloy-primitives = "1.4.1"
alloy-provider = "1.0.41"
alloy-sol-macro = "1.4.1"
base64 = "0.22.1"
clap = { version = "4.5.50", features = ["derive"], optional = true }
halo2_gadgets = "0.3.1"
halo2_proofs = "0.3.1"
halo2curves = "0.9.0"
rayon = "1.11.0"
revm-primitives = { version = "21.0.1", features = ["serde"] }

[features]
clap = ["dep:clap"]

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
proptest = "1.8.0"
proptest-derive = "0.6.0"
tokio = { version = "1.47.0", features = ["full"] }

