[package]
name = "zephyr-proof"
version = "0.1.0"
edition = "2021"
authors = ["Kunal Singh Dadhwal <kunalsinghdadhwal@gmail.com>"]
description = "Modular Halo2-based ZK circuits for selective EVM opcode verification. A building block for real-time zkEVM proving."
license = "MIT"
repository = "https://github.com/kunalsinghdadhwal/zephyr-proof"
keywords = ["zk", "ethereum", "halo2", "evm", "proof"]
categories = ["cryptography::cryptocurrencies", "no-std"]
readme = "README.md"

[lib]
name = "zephyr_proof"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "zkevm-prover"
path = "src/main.rs"

[[bin]]
name = "verifier-cli"
path = "bin/cli.rs"
required-features = ["cli"]

[[bin]]
name = "benchmark"
path = "bin/benchmark.rs"
required-features = ["bench"]

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256

[profile.release]
opt-level = 3
debug = false
split-debuginfo = "unpacked"
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1

[workspace]
members = []

[dependencies]
alloy-contract = "1.0.41"
alloy-primitives = "1.4.1"
alloy-provider = "1.0.41"
alloy-sol-macro = "1.4.1"
alloy-rpc-types = "1.0.41"
alloy-transport = "1.0.41"
alloy-transport-http = "1.0.41"
base64 = "0.22.1"
clap = { version = "4.5.50", features = ["derive"] }
halo2_gadgets = "0.3.1"
halo2_proofs = "0.3.1"
halo2curves = "0.9.0"
rayon = "1.11.0"
revm = { version = "21.0.1", features = ["serde"] }
revm-primitives = { version = "21.0.1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.47.0", features = ["full"] }
hex = "0.4"
sha2 = "0.10"

[features]
cli = ["clap"]
bench = []

[dev-dependencies]
anyhow = "1.0"
criterion = { version = "0.7.0", features = ["html_reports"] }
proptest = "1.8.0"
proptest-derive = "0.6.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[[bench]]
name = "bench_proving"
harness = false
